--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
 					<div class="tools__buttons">
 						<div class="tools__header">Добавить элемент</div>
 						<div class="tools__row">
-							<a class="tools__button" id="rock-button" title="Камень">🗿</a>
-							<a class="tools__button" id="paper-button" title="Бумага">🧻</a>
-							<a class="tools__button" id="scissors-button" title="Ножницы">✂️</a>
-							<a class="tools__button" id="random-button" title="Случайный элемент">❓</a>
-							<a class="tools__button" id="delete-button" title="Удалить элемент">❌</a>
+							<a class="tools__button" id="rock-button" title="Камень"><span>🗿</span></a>
+							<a class="tools__button" id="paper-button" title="Бумага"><span>🧻</span></a>
+							<a class="tools__button" id="scissors-button" title="Ножницы"><span>✂️</span></a>
+							<a class="tools__button" id="random-button" title="Случайный элемент"
+								><span>❓</span></a
+							>
+							<a class="tools__button" id="delete-button" title="Удалить элемент"
+								><span>❌</span></a
+							>
 						</div>
 					</div>
 					<div class="tools__size">
